2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
		* pisi/scenarioapi/package.py: Fixed repo_version_bumped() ignoring
		with_version() argument.

2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
		* pisi/scenarioapi/pspec.py: AnyDependency support added to
		with_dependencies() method. Simply give AnyDependency list as an
		argument.

2009-11-22 Bahadır Kandemir <bahadir@pardus.org.tr>
		* pisi/operations/build.py, pisi/index.py: *Size variables should be
		long, instead of int.

2009-11-09 Faik Uygur <faik@pardus.org.tr>
		* pisi/actionsapi/perlmodules.py: KeepSpecial should control pod file removal.
                Remove .packlist files from perl packages.

2009-10-15 Ozan Çağlayan <ozan@pardus.org.tr>
		* pisi/operations/build.py (Builder.generate_debug_package_object):
		Don't append dbginfo to the debug packages' component.

2009-09-25 Gökçen Eraslan <gokcen@pardus.org.tr>
		* pisi/actionsapi/pisitools.py: In dosym method, file that already exists is the
		destination file, not the source file. Print the correct error message
		when there is already a destination file.

2009-09-22 Fatih Aşıcı <fatih@pardus.org.tr>
		* pisi/operations/build.py: Fix the special file patterns
		for the new code using python magic module.

2009-09-16 Ozan Çağlayan <ozan@pardus.org.tr>
		* pisi/archive.py (ArchiveBzip2): Implement ArchiveBzip2 to support
		.bz2 archive files,
		* pisi/operations/build.py (Builder.file_actions): Use python magic
		module instead of spawning file process to improve performance.

2009-09-08 Ozan Çağlayan <ozan@pardus.org.tr>
		* pisi/specfile.py (read_translations): Fix matching of translations
		against sub-packages.

2009-08-23 Fatih Aşıcı <fatih@pardus.org.tr>
		* Normalize target paths of symbolic links. Fixes #10976.

2009-08-22 Fatih Aşıcı <fatih@pardus.org.tr>
		* Add optional destDir parameter to pisitools.dohtml as
		pisitools.dodoc supports.

2009-08-04 Ozan Çağlayan <ozan@pardus.org.tr>