@@ -1,4 +1,7 @@
 2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
+		* pisi/scenarioapi/pspec.py: Reverted AnyDependency changes.
+
+2009-12-04 Bahadır Kandemir <bahadir@pardus.org.tr>
 		* pisi/scenarioapi/package.py: Fixed repo_version_bumped() ignoring
 		with_version() argument.
 
